turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:22: error: Any does not take parameters
    x(i)(0)(x(i)(1))
           ^