turtleart.kerr36.Kerr36.scala.code
var x = Array(
  Array((right:Int => Unit), 45),
	Array((left:Int => Unit), 90),
  Array((right:Int => Unit), 45),
  Array((right:Int => Unit), 90),
  Array((left:Int => Unit), 45),
  Array((left:Int => Unit), 90 + 45),
  Array((right:Int => Unit), 45)
)



override def run():Unit= { 
  for(i <- 1 to 8) {
  	makePattern()
    right(360/8)
  }
}

def makePattern() {
  for(i <- 0 to x.length - 1) {
    x(i)(0)(x(i)(1))
  }
  /*
  forward(20)
  right(45)
  forward(20)
  left(90)
  forward(20)
  right(45)
  forward(20)
  right(90)
  forward(20)
  left(45)
  forward(20)
  left(90 + 45)
  forward(20)
  right(45)
  forward(20)
  left(90)
  
  forward(20)
  right(45)
  forward(20)
  left(90 + 45)
  forward(20)
  left(45)
  forward(20)
  right(90)
  forward(20)
  right(45)
  forward(20)
  left(90)
  forward(20)
  right(45)
  forward(20)
  left(180)
  */
}